Prepare charts for global values (#41)
