# apis/installer/v1alpha1/kube_ui_server_types.go
@@ -49,6 +49,7 @@ type KubeUiServerSpec struct {
 	//+optional
 	FullnameOverride string    `json:"fullnameOverride"`
 	ReplicaCount     int32     `json:"replicaCount"`
+	RegistryFQDN     string    `json:"registryFQDN"`
 	Image            Container `json:"image"`
 	ImagePullPolicy  string    `json:"imagePullPolicy"`
 	//+optional
